--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, a, img, ul, li {
     border: 0;
     outline: 0;
     font-family: 'Playfair Display', serif;
+    scroll-behavior: smooth;
 }
 
 html::-webkit-scrollbar {
@@ -11,7 +12,6 @@ html::-webkit-scrollbar {
 }
 
 html, body {
-    background-color: rgb(0, 0, 0); /* Choose any color you'd like */
     margin: 0;
     padding: 0;
 }
@@ -19,15 +19,29 @@ html, body {
 
 header.home {
     height: 100vh;
-    background-image: 
-    linear-gradient(to bottom, rgb(0, 0, 0, 0.9), rgba(0, 0, 0, 0) 200px),
-    url('perfumewebbg.JPG');
-    background-size: cover;
+    background-attachment: fixed;
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     z-index: 10;
+}
+
+.bg-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: 
+    linear-gradient(to bottom, rgb(0, 0, 0, 0.9), rgba(0, 0, 0, 0) 200px),
+    url('perfumewebbg.JPG');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -200; 
 }
 
 
@@ -140,7 +154,7 @@ header h1 {
 .material-content {
     max-height: 0;
     overflow: hidden;
-    transition: ease-in-out 0.35s;
+    transition: max-height 0.35s ease-in-out;
     background-color: rgba(122, 122, 122, 0.15);
     border-radius: 8px;
     margin: 0px 10px 10px 10px;
@@ -148,6 +162,7 @@ header h1 {
 
 .material-item.active .material-content {
     max-height: 1000px; /* Adjust to fit the content */
+    display: block;
 }
 
 
@@ -173,7 +188,7 @@ header h1 {
     top: 0;
     left: 0;
     width: 100%;
-    margin: 19vh 0 0 0;
+    margin: 18vh 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -229,12 +244,11 @@ header h1 {
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 12px; /* Spacing between form elements */
 }
 
 #newMaterialForm label {
     font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     color: #333;
 }
 
@@ -248,6 +262,7 @@ header h1 {
     width: 100%;
     box-sizing: border-box;
     background-color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 15px;
 }
 
 #newMaterialForm textarea {
@@ -283,6 +298,8 @@ header h1 {
     background-color: rgba(255, 255, 255, 0.8);
     cursor: pointer;
     appearance: none; /* Removes default styling for dropdowns in some browsers */
+    margin-bottom: 15px;
+    margin-top: 8px;
 }
 
 #newMaterialForm select#materialType:focus {
@@ -503,4 +520,36 @@ header h1 {
     color: #555;
     margin-left: 20px;
     justify-content: center;
+}
+
+.item-count {
+    font-size: 1em;
+    color: #555;
+    font-family: 'Source Sans Pro', sans-serif;
+    margin-top: -17px;
+    margin-bottom: 18px;
+}
+
+.gotop {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 40px;
+    right: 50px;
+    pointer-events: auto;
+    z-index: 200;
+
+    text-decoration: none;
+    text-align: center;
+    line-height: 50px;
+    color: #4d4d4d;
+    font-size: 22px;
+    border-radius: 25px;
+    border: 3px solid #333;
+    transition: background-color 1s ease;
+}
+
+.gotop:hover {
+    color: #ccc;
+    border: 3px solid #ccc;
 }
