--- a/style.css
+++ b/style.css
@@ -553,3 +553,23 @@ header h1 {
     color: #ccc;
     border: 3px solid #ccc;
 }
+
+.logo {
+    position: fixed;
+    width: 150px;
+    height: auto;
+    top: 42px;
+    left: 100px;
+    pointer-events: auto;
+    z-index: 200;
+    background-color: rgb(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 5px;
+    border: 1px solid rgb(0, 0, 0, 0)
+}
+
+.logo:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+}
