--- a/style.css
+++ b/style.css
@@ -562,14 +562,12 @@ header h1 {
     left: 100px;
     pointer-events: auto;
     z-index: 200;
-    background-color: rgb(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 5px;
-    border: 1px solid rgb(0, 0, 0, 0)
+    border: 1px solid rgb(0, 0, 0, 0);
+    transition: opacity 0.2s ease;
 }
 
 .logo:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    cursor: pointer;
-    border: 1px solid rgba(255, 255, 255, 0.25);
+    opacity: 0.5;
 }
