--- a/style.css
+++ b/style.css
@@ -544,6 +544,8 @@ header a:first-child {
     margin-right: 20px;
 }
 
+
+
 .formulamargin {
     margin: 10px 15px 5px 15px;
 }
@@ -576,7 +578,7 @@ header a:first-child {
     text-decoration: none;
     text-align: center;
     line-height: 50px;
-    color: #4d4d4d;
+    color: #333;
     font-size: 22px;
     border-radius: 25px;
     border: 3px solid #333;
@@ -659,106 +661,7 @@ header a:first-child {
 /* Adjust styles for screens narrower than 480px (mobile) */
 @media (max-width: 480px) {
     
-
-    .materials {
-        width: 85%; /* Use full width for mobile screens */
-        padding: 20px;
-    }
-
-    .materials h1 {
-        font-size: 24px;
-    }
-
-    .gotop {
-        width: 40px; /* Adjust size for smaller screens */
-        height: 40px;
-        font-size: 18px;
-    }
-
     
-
-    
-
-    .material-item.active .material-content {
-        max-height: 5000px; /* Adjust to fit the content */
-        display: block;
-    }
-
-    .material-content img {
-        max-width: 316px;
-        float: left;
-        margin: 10px 10px 10px 15px;
-    }
-    
-    .material-content p {
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 14px;
-    }
-
-    .gotop {
-        position: fixed;
-        width: 45px;
-        height: 45px;
-        bottom: 30px;
-        right: 40px;
-        pointer-events: auto;
-        z-index: 200;
-        color: #333;
-        text-decoration: none;
-        text-align: center;
-        line-height: 45px;
-        color: #4d4d4d;
-        font-size: 22px;
-        border-radius: 50px;
-        border: 3px solid #333;
-        transition: background-color 1s ease;
-    }
-
-    .gotop:hover {
-        color: #333;
-        border: 3px solid #333;
-    }
-
-    .overlay-container {
-        position: absolute;
-        top: 100px;
-        left: 0;
-        width: 100%;
-        margin: 18vh 0 0 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1;
-        flex-direction: column;
-    }
-
-    .materials button {
-        margin-bottom: 20px;
-        
-    }
-    
-    .material-list {
-        width: 99.5%;
-        padding: 5px;
-    }
-
-    .material-list div {
-        font-size: 14px;
-        align-items: center;
-        text-align: left;
-        max-height: 100px;
-        padding: 5px;
-    }
-
-    .percentage-meter {
-        font-size: 18px;
-    }
-    
-    .attribute-pair {
-        display: flex;
-        font-size: 14px;
-        font-family: 'Source Sans Pro', sans-serif;
-    }
 
     .material-content ul li {
         display: block;
@@ -768,38 +671,61 @@ header a:first-child {
         margin-bottom: 5px;
     }
 
-    .progress-bar {
-        width: 100%;
-    }
-}
-
-@media (max-width: 360px) {
-    .material-content img {
-        max-width: 247px;
-        float: left;
-        margin: 10px 10px 10px 15px;
-    }
-
-    .overlay-container {
-        top: 135px;
-    }
-
-    .materials {
-        width: 82%;
-    }
-
     
-
-    .materials button {
-        margin: 0px 0px 0px 5px;
-    }
-
-    .material-list div {
-        margin-bottom: 25px;
-    }
 }
 
 @media (max-width: 800px) {
+    .attribute-pair {
+        font-size: 14px;
+    }
+
+    .material-content .attribute-pair:not(:first-child) {
+        margin-left: 20px;
+    }
+    
+    #searchBox {
+        display: flex;
+        width: 93%;
+        margin-bottom: 10px;
+    }
+
+    #blendSearchBox {
+        display: flex;
+        width: 93%;
+    }
+
+    .progress-bar {
+        width: 100%;
+    }
+
+    .materials label {
+        font-size: 18px;
+        
+    }
+    .percentage-meter {
+        font-size: 15px;
+    }
+
+    .material-list div {
+        font-size: 14px;
+        align-items: center;
+        text-align: left;
+        padding: 5px;
+    }
+    
+    .material-list {
+        width: 99.5%;
+        padding: 5px;
+    }
+
+    .materials button {
+        margin-bottom: 10px;
+        margin-top: 0px;   
+    }
+
+    .overlay-container {
+        top: 5vh;
+    }
 
     .sidebar {
         width: 100%;
@@ -861,19 +787,22 @@ header a:first-child {
     }
 
     .materials {
-        width: 90%; /* Reduce width for smaller screens */
-        padding: 15px;    
+        width: 80%;
     }
 
+    .material-content p {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 14px;
+    }
     .material-content img {
-        max-width: 100%; /* Ensure images fit within container */
+        max-width: 80%; /* Ensure images fit within container */
         float: none; /* Remove float for better stacking */
-        margin: 10px auto;
+        margin: auto;
         display: block;
     }
 
     .material-header {
-        font-size: 18px; /* Adjust header font size */
+        font-size: 16px; /* Adjust header font size */
     }
 
     #addMaterialButton {
@@ -881,10 +810,18 @@ header a:first-child {
     }
 
     .gotop:hover {
-        color: inherit; /* Reset to default color */
+        color: #333; /* Reset to default color */
         border: 3px solid #333; /* Reset to default border */
     }
 
+    .materials h1 {
+        font-size: 24px;
+    }
+
+    .material-item.active .material-content {
+        max-height: 10000px; /* Adjust to fit the content */
+        display: block;
+    }
 }
    
 
