--- a/style.css
+++ b/style.css
@@ -110,7 +110,9 @@ header a:first-child {
     background-color: rgba(255, 255, 255, 0.2); 
 }
 
-
+.button-group {
+    display: flex;
+}
 
 .text-container {
     position: absolute;
@@ -147,6 +149,16 @@ header a:first-child {
     margin: 20px 0px 5px 0px;
     border-radius: 5px;
 }
+
+#searchMaterials {
+    width: 98%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
 
 #blendSearchBox {
     width: 98%;
@@ -432,6 +444,16 @@ header a:first-child {
     margin-left: 2.5vh;
 }
 
+#clear-board-btn {
+    background-color: transparent;
+    border: 1px solid #585858;
+    color: #585858;
+}
+
+#clear-board-btn:hover {
+    background-color: #ffffff91;
+}
+
 .materials button:hover {
     background-color: #555;
 }
@@ -683,7 +705,13 @@ header a:first-child {
         margin-left: 20px;
     }
     
-    #searchBox {
+    #searchBox  {
+        display: flex;
+        width: 93%;
+        margin-bottom: 10px;
+    }
+
+    #searchMaterials {
         display: flex;
         width: 93%;
         margin-bottom: 10px;
